fixing spacing gap on FeatureTiles, reducing copy on Contact and adding margin to banner on mobile

--- a/src/components/featureTiles/featureTiles.module.css
+++ b/src/components/featureTiles/featureTiles.module.css
@@ -21,6 +21,10 @@
   scrollbar-width: none;
 }
 
+.noTopPadding .serviceWrapper {
+  margin: 0;
+}
+
 .timeline {
   margin: 0;
 }
